--- a/go-apps/meep-auth-svc/Dockerfile
+++ b/go-apps/meep-auth-svc/Dockerfile
@@ -13,14 +13,12 @@
 # limitations under the License.
 
 FROM debian:9.6-slim
-COPY ./meep-platform-ctrl /meep-platform-ctrl
-COPY ./frontend /frontend
-COPY ./swagger /swagger
-# COPY ./permissions.yaml /permissions.yaml
+COPY ./meep-auth-svc /meep-auth-svc
+COPY ./permissions.yaml /permissions.yaml
 
-# RUN apt-get update \
-#  && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ca-certificates
+RUN apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ca-certificates
 
-# RUN update-ca-certificates
+RUN update-ca-certificates
 
-ENTRYPOINT ["/meep-platform-ctrl"]
+ENTRYPOINT ["/meep-auth-svc"]
