--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -123,9 +123,8 @@ ingress:
   enabled: true
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/auth-url: https://10.190.114.150/auth/v1/authenticate?svc=grafana&sbox=
+    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=grafana
     kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   labels: {}
   path: /grafana(/|$)(.*)
   hosts:
