--- a/charts/meep-mg-manager/values-template.yaml
+++ b/charts/meep-mg-manager/values-template.yaml
@@ -33,7 +33,6 @@ service:
 
 ingress:
   enabled: true
-  # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
@@ -41,16 +40,11 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .HttpsOnly }}
-    # kubernetes.io/tls-acme: "true"
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-mg-manager&sbox={{ .SandboxName }}
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/mgm(/|$)(.*)$ /mgm/$2 break;
   labels: {}
   tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
 
 codecov:
   enabled: false
