--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -37,17 +37,13 @@ service:
 
 ingress:
   enabled: true
-  # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /mon-engine
   annotations:
     kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^(/api)$ $1/ redirect;
+    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-mon-engine
 
 codecov:
   enabled: false
