--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -123,8 +123,8 @@ ingress:
   enabled: true
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=grafana
     kubernetes.io/ingress.class: nginx
+    # nginx.ingress.kubernetes.io/auth-url: <-- set by 'meepctl deploy' when auth enabled
   labels: {}
   path: /grafana(/|$)(.*)
   hosts:
