--- a/charts/meep-metrics-engine/values-template.yaml
+++ b/charts/meep-metrics-engine/values-template.yaml
@@ -17,7 +17,6 @@ image:
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
     MEEP_HOST_URL: {{ .HostUrl }}
-    MEEP_SESSION_KEY: {{ .SessionKey }}
 
 service:
   name: meep-metrics-engine
@@ -33,9 +32,11 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .HttpsOnly }}
-    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-metrics-engine&sbox={{ .SandboxName }}
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/metrics(/|$)(.*)$ /metrics/$2 break;
+    {{- if .AuthEnabled }}
+    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-metrics-engine&sbox={{ .SandboxName }}
+    {{- end }}
   labels: {}
   tls:
 
