--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -25,9 +25,6 @@ image:
   pullPolicy: Always
   env:
   envSecret:
-    MEEP_SESSION_KEY:
-      name: meep-session
-      key: encryption-key
 
 service:
   type: ClusterIP
@@ -42,11 +39,11 @@ ingress:
         - /platform-ctrl
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-platform-ctrl
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/api$ $scheme://$http_host/api/ permanent;
       rewrite ^/alt$ $scheme://$http_host/alt/ permanent;
       rewrite ^/alt/api$ $scheme://$http_host/alt/api/ permanent;
+    # nginx.ingress.kubernetes.io/auth-url: <-- set by 'meepctl deploy' when auth enabled
   labels: {}
   tls:
 
