--- a/charts/meep-auth-svc/values.yaml
+++ b/charts/meep-auth-svc/values.yaml
@@ -61,8 +61,15 @@ ingress:
     - name: ''
       paths:
         - /auth
+        # Deprecated endpoint support
+        - /platform-ctrl/v1/authorize
+        - /platform-ctrl/v1/login
+        - /platform-ctrl/v1/logout
+        - /platform-ctrl/v1/watchdog
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/platform-ctrl(/|$)(.*)$ /auth/$2 break;
   labels: {}
   tls:
 
