--- a/charts/meep-auth-svc/templates/deployment.yaml
+++ b/charts/meep-auth-svc/templates/deployment.yaml
@@ -39,6 +39,11 @@ spec:
           ports:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
+          {{- if .Values.prometheus.monitor.enabled}}
+            - name: metrics
+              containerPort: {{ .Values.prometheus.monitor.port }}
+              protocol: TCP
+          {{- end}}
           env:
             {{- range $key, $value := .Values.image.env }}
             - name: {{ $key }}
