--- a/charts/meep-auth-svc/templates/service.yaml
+++ b/charts/meep-auth-svc/templates/service.yaml
@@ -15,8 +15,15 @@ spec:
     release: {{ .Release.Name }}
     meepOrigin: {{ .Values.meepOrigin }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: auth-svc
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.deployment.port }}
       {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
+    {{- if .Values.prometheus.monitor.enabled}}
+    - name: metrics
+      port: {{ .Values.prometheus.monitor.port }}
+      targetPort: {{ .Values.prometheus.monitor.port }}
+      protocol: TCP
+    {{- end}}
