- Added code for deleting pvc's - Added code for creating and deleting prerequisites crd's

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -83,6 +83,14 @@ repo:
         secret: meep-oauth-gitlab
 
   #------------------------------
+  #  Resource Prerequisites
+  #------------------------------
+  resource-prerequisites:
+    # k8s Custom Resource Definitions
+    crds:
+      servicemonitors.monitoring.coreos.com: charts/kube-prometheus-stack/crds/crd-servicemonitors.yaml
+
+  #------------------------------
   #  Core Subsystem
   #------------------------------
   core:
