--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -154,21 +154,21 @@ alertmanager:
   ## ref: https://prometheus.io/docs/alerting/configuration/#configuration-file
   ##      https://prometheus.io/webtools/alerting/routing-tree-editor/
   ##
-  # config:
-  #   global:
-  #     resolve_timeout: 5m
-  #   route:
-  #     group_by: ['job']
-  #     group_wait: 30s
-  #     group_interval: 5m
-  #     repeat_interval: 12h
-  #     receiver: 'null'
-  #     routes:
-  #     - match:
-  #         alertname: Watchdog
-  #       receiver: 'null'
-  #   receivers:
-  #   - name: 'null'
+  config:
+    global:
+      resolve_timeout: 5m
+    route:
+      group_by: ['job']
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 12h
+      receiver: 'null'
+      routes:
+      - match:
+          alertname: Watchdog
+        receiver: 'null'
+    receivers:
+    - name: 'null'
 
   # config:
   #   global:
@@ -1951,9 +1951,6 @@ prometheus:
           selector:
             matchLabels:
               app: prometheus-server
-
-    storageClass:
-      enabled: false
 
     persistentVolume:
       enabled: true
