--- a/charts/influxdb/Chart.yaml
+++ b/charts/influxdb/Chart.yaml
@@ -1,18 +1,22 @@
 apiVersion: v2
-name: influxdb
-version: 3.0.1
-appVersion: 1.7.6
+appVersion: 1.8.0
 description: Scalable datastore for metrics, events, and real-time analytics.
+home: https://www.influxdata.com/time-series-platform/influxdb/
 keywords:
 - influxdb
 - database
 - timeseries
-home: https://www.influxdata.com/time-series-platform/influxdb/
+- influxdata
+maintainers:
+- email: rawkode@influxdata.com
+  name: rawkode
+- email: giacomo@influxdata.com
+  name: gitirabassi
+- email: urakiny@gmail.com
+  name: aisuko
+- email: naseem@transit.app
+  name: naseemkullah
+name: influxdb
 sources:
 - https://github.com/influxdata/influxdb
-maintainers:
-- name: jackzampolin
-  email: jack@influxdb.com
-- name: aisuko
-  email: urakiny@gmail.com
-engine: gotpl
+version: 4.8.10
