--- a/charts/influxdb/templates/persistentvolume.yaml
+++ b/charts/influxdb/templates/persistentvolume.yaml
@@ -4,10 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "influxdb.fullname" . }}
   labels:
-    app: {{ template "influxdb.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "influxdb.labels" . | nindent 4 }}
 spec:
   capacity:
     storage: {{ .Values.persistence.size }}
