--- a/charts/influxdb/templates/service.yaml
+++ b/charts/influxdb/templates/service.yaml
@@ -5,69 +5,55 @@ metadata:
   annotations:
 {{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
-  name: "{{ template "influxdb.fullname" . }}"
+  name: {{ include "influxdb.fullname" . }}
   labels:
-    app: "{{ template "influxdb.fullname" . }}"
-    chart: "{{ template "influxdb.chart" . }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "influxdb.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if .Values.service.clusterIP }}
-  clusterIP: {{ .Values.service.clusterIP }}
-  {{- end }}
-  {{- if .Values.service.externalIPs }}
-  externalIPs:
-  {{ toYaml .Values.service.externalIPs | indent 4 }}
-  {{- end }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
-  {{- with .Values.service.loadBalancerSourceRanges }}
-  loadBalancerSourceRanges:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
   ports:
-  {{- if .Values.config.http.enabled }}
   - name: api
-    port: {{ .Values.config.http.bind_address }}
-    targetPort: {{ .Values.config.http.bind_address }}
+    port: {{ .Values.config.http.bind_address | default 8086 }}
+    targetPort: api
     {{- if .Values.service.apiNodePort }}
     nodePort: {{ .Values.service.apiNodePort }}
     {{- end }}
-  {{- end }}
-  {{- if .Values.config.admin.enabled }}
-  - name: admin
-    port: {{ .Values.config.admin.bind_address }}
-    targetPort: {{ .Values.config.admin.bind_address }}
-  {{- end }}
-  {{- if .Values.config.graphite.enabled }}
-  - name: graphite
-    port: {{ .Values.config.graphite.bind_address }}
-    targetPort: {{ .Values.config.graphite.bind_address }}
-  {{- end }}
-  {{- if .Values.config.collectd.enabled }}
-  - name: collectd
-    port: {{ .Values.config.collectd.bind_address }}
-    targetPort: {{ .Values.config.collectd.bind_address }}
-  {{- end }}
-  {{- if .Values.config.udp.enabled }}
-  - name: udp
-    port: {{ .Values.config.udp.bind_address }}
-    targetPort: {{ .Values.config.udp.bind_address }}
-  {{- end }}
-  {{- if .Values.config.opentsdb.enabled }}
-  - name: opentsdb
-    port: {{ .Values.config.opentsdb.bind_address }}
-    targetPort: {{ .Values.config.opentsdb.bind_address }}
-  {{- end }}
-  {{- if .Values.config.rpc.enabled }}
   - name: rpc
-    port: {{ .Values.config.rpc.bind_address }}
-    targetPort: {{ .Values.config.rpc.bind_address }}
+    port: {{ .Values.config.rpc.bind_address | default 8088 }}
+    targetPort: rpc
     {{- if .Values.service.rpcNodePort }}
     nodePort: {{ .Values.service.rpcNodePort }}
     {{- end }}
+  {{- if .Values.config.graphite.enabled }}
+  - name: graphite
+    port: {{ .Values.config.graphite.bind_address | default 2003 }}
+    targetPort: graphite
+  {{- end }}
+  {{- if .Values.config.collectd.enabled }}
+  - name: collectd
+    port: {{ .Values.config.collectd.bind_address | default 25826 }}
+    protocol: UDP
+    targetPort: collectd
+  {{- end }}
+  {{- if .Values.config.udp.enabled }}
+  - name: udp
+    port: {{ .Values.config.udp.bind_address | default 8089 }}
+    protocol: UDP
+    targetPort: udp
+  {{- end }}
+  {{- if .Values.config.opentsdb.enabled }}
+  - name: opentsdb
+    port: {{ .Values.config.opentsdb.bind_address | default 4242 }}
+    targetPort: opentsdb
   {{- end }}
   selector:
-    app: {{ template "influxdb.fullname" . }}
+    {{- include "influxdb.selectorLabels" . | nindent 4 }}
+{{- if .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+{{- end }}
+{{- if .Values.service.externalIPs }}
+  externalIPs:
+{{ toYaml .Values.service.externalIPs | indent 4 }}
+{{- end }}
+{{- if .Values.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+{{- end }}
