added MetricsHandler to store REST API metrics using Prometheus + updated charts & services to expose /metrics endpoint on port 9000

--- a/charts/meep-loc-serv/values-template.yaml
+++ b/charts/meep-loc-serv/values-template.yaml
@@ -40,6 +40,15 @@ ingress:
   labels: {}
   tls:
 
+prometheus:
+  monitor:
+    enabled: true
+    port: 9000
+    interval: 10s
+    additionalLabels: {}
+    relabelings: []
+    scrapeTimeout: 5s
+
 codecov:
   enabled: false
 
