--- a/charts/meep-metrics-engine/templates/service.yaml
+++ b/charts/meep-metrics-engine/templates/service.yaml
@@ -14,8 +14,15 @@ spec:
     app: {{ template "meep-metrics-engine.name" . }}
     release: {{ .Release.Name }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: metrics-engine
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.deployment.port }}
       {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
+    {{- if .Values.prometheus.monitor.enabled}}
+    - name: metrics
+      port: {{ .Values.prometheus.monitor.port }}
+      targetPort: {{ .Values.prometheus.monitor.port }}
+      protocol: TCP
+    {{- end}}
