--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -43,6 +43,15 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # nginx.ingress.kubernetes.io/auth-url: <-- set by 'meepctl deploy' when auth enabled
 
+prometheus:
+  monitor:
+    enabled: true
+    port: 9000
+    interval: 10s
+    additionalLabels: {}
+    relabelings: []
+    scrapeTimeout: 5s
+    
 codecov:
   enabled: false
 
