--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -47,6 +47,15 @@ ingress:
   labels: {}
   tls:
 
+prometheus:
+  monitor:
+    enabled: true
+    port: 9000
+    interval: 10s
+    additionalLabels: {}
+    relabelings: []
+    scrapeTimeout: 5s
+    
 codecov:
   enabled: false
   location: "<WORKDIR>/codecov/meep-platform-ctrl"
