--- a/charts/meep-wais/templates/service.yaml
+++ b/charts/meep-wais/templates/service.yaml
@@ -14,9 +14,16 @@ spec:
     app: {{ template "meep-wais.name" . }}
     release: {{ .Release.Name }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: wais
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.deployment.port }}
       {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
+    {{- if .Values.prometheus.monitor.enabled}}
+    - name: metrics
+      port: {{ .Values.prometheus.monitor.port }}
+      targetPort: {{ .Values.prometheus.monitor.port }}
+      protocol: TCP
+    {{- end}}
 
